[package]
name = "arrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2", features = ["derive"]}
dirs = "5.0.1"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[target.arm-unknown-linux-gnueabihf]
linker = "arm-unknown-linux-gnueabihf-gcc"
