[package]
name = "arrow"
version = "0.1.0"
edition = "2021"
description = "Pipeline builder for git hooks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2", features = ["derive"]}
dirs = "5.0.1"
env-file-reader = "0.3.0"
glob = "0.3.1"
handlebars = "4.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9"
tempfile = "3.8.0"
ureq = { version = "*", features = ["json", "native-certs", "gzip"] }

[target.arm-unknown-linux-gnueabihf]
linker = "arm-unknown-linux-gnueabihf-gcc"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"
